:construction: Fixs files dand changelogs